--- a/01_Inception/App.css
+++ b/01_Inception/App.css
@@ -59,3 +59,14 @@
     border-radius: 12px;
     cursor: pointer;
 }
+
+.shimmerContainer{
+    display: flex;
+    flex-wrap: wrap;
+}
+.cards{
+    height: 400px;
+    width: 200px;
+    background-color: rgb(250, 245, 238);
+    margin: 20px;
+}
